--- a/React/route-project/src/assets/css/style.css
+++ b/React/route-project/src/assets/css/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active{
+    color:blueviolet;
+    border: 4px solid blueviolet;
+}
+
+
